# RustCpp

./: .gitignore  CMakeLists.txt  README.md  TaskManager.cpp  TaskManager.hpp  example_c.c  task_c.cpp  task_c.h
.github/workflows/: ci.yml
rust_consumer/: Cargo.toml  build.rs
rust_consumer/src/: main.rs
tests/: example_consumer.c  test_task_c.c
